# grl

./: .gitignore  ARCHITECTURE.md  BYOK.md  ENVS.md  README.md  TODO.md  sample.json
.cursor/plans/: grl_training_observability_34a40b61.plan.md
.github/workflows/: docs.yml  images.yml  kvm-conformance.yml
config/: README.md  pyproject.toml
config/src/grl_config/: __init__.py  infra.py  run_id.py  training.py
config/src/grl_config/providers/: __init__.py  aws.py
config/tests/: test_infra.py  test_providers_aws.py  test_training.py
docs/: Dockerfile  README.md  package-lock.json  package.json
docs/app/: content.ts  docs-page.tsx  globals.css  in-page-nav.tsx  layout.tsx  page.tsx
docs/app/[slug]/: page.tsx
docs/content/: configuration.mdx  eks-cluster.mdx  environment-api.mdx  environment-manager.mdx  execution-model.mdx  grpo-pipeline.mdx  launcher-cli.mdx  observability.mdx  overview.mdx  ray-node-groups.mdx  rollout-workers.mdx  system-architecture.mdx  telemetry.mdx  weight-synchronization.mdx
environments/: MANAGED_ENVIRONMENT_CONTRACT.md  PHASE3-OVERLAY-PLAN.md
environments/bootstrap/: Cargo.toml
environments/bootstrap/src/: main.rs
environments/conformance/: build-fixture.sh
environments/manager/: Cargo.toml  Dockerfile  README.md  build.rs
environments/manager/src/: catalog.rs  environment.rs  lib.rs  main.rs  registry.rs  reload.rs  telemetry.rs
environments/manager/src/vm/: config.rs  executor.rs  firecracker.rs  jailer.rs  mod.rs  paths.rs  scratch.rs  snapshot.rs  vsock.rs
environments/manager/tests/: kvm_conformance.rs
environments/minimal-env/: Cargo.toml  build.rs
environments/minimal-env/src/: main.rs
environments/proto/grl/environment/v1/: environment.proto
environments/swebench-lite/: README.md
environments/swebench-lite/data/files/: dev.parquet  test.parquet
environments/swebench-lite/env/: Cargo.toml  build.rs
environments/swebench-lite/env/src/: lib.rs  main.rs  score.rs  server.rs  session.rs
environments/swebench-lite/server/: Cargo.toml  build.rs
environments/swebench-lite/server/src/: environment.rs  lib.rs
environments/swebench-lite/vms/: manifest.json  pyproject.toml  tasks.jsonl
environments/swebench-lite/vms/assets/: grl-init
environments/swebench-lite/vms/dockerfiles/marshmallow-code__marshmallow-3.0/: Dockerfile
environments/swebench-lite/vms/dockerfiles/pvlib__pvlib-python-0.9/: Dockerfile
environments/swebench-lite/vms/dockerfiles/pydicom__pydicom-1.3/: Dockerfile
environments/swebench-lite/vms/dockerfiles/pydicom__pydicom-2.0/: Dockerfile
environments/swebench-lite/vms/dockerfiles/pydicom__pydicom-2.1/: Dockerfile
environments/swebench-lite/vms/dockerfiles/pydicom__pydicom-2.3/: Dockerfile
environments/swebench-lite/vms/dockerfiles/pylint-dev__astroid-2.10/: Dockerfile
environments/swebench-lite/vms/dockerfiles/pyvista__pyvista-0.39/: Dockerfile  requirements.txt
environments/swebench-lite/vms/dockerfiles/sqlfluff__sqlfluff-0.6/: requirements.txt
environments/swebench-lite/vms/dockerfiles/sqlfluff__sqlfluff-0.8/: Dockerfile  requirements.txt
environments/swebench-lite/vms/src/vms/: build_bootstrap.py  build_environment.py  build_images.py  build_tasks.py  dataset.py  dockerfile.py  env_binary.py  env_yml.py  images.py  kernel_config.py  main.py  manifest.py  requirements.py  tasks.py  upload.py  versions.py
environments/swebench-lite/vms/tests/: test_image_paths.py  test_initrd.py
infra/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
infra/aws/: locals.tf  main.tf  variables.tf  versions.tf
infra/aws/modules/cluster/: main.tf  variables.tf
infra/aws/modules/vpc/: variables.tf
infra/byok/: main.tf  variables.tf  versions.tf
infra/charts/environments/: Chart.yaml  values.yaml
infra/charts/environments/templates/: bundle-sync.yaml
infra/modules/charts/: main.tf  variables.tf
infra/modules/cluster/: main.tf  variables.tf
infra/modules/resources/: main.tf  outputs.tf  variables.tf
infra/modules/resources/chart/: Chart.yaml  values.yaml
infra/modules/resources/chart/templates/: dcgm-exporter.yaml  manager.yaml  model-cache-secret.yaml  model-cache.yaml  otelcollector-rbac.yaml  otelcollector.yaml  raycluster.yaml  vm-image-cache.yaml
infra/modules/vpc/: main.tf
infra/observability/: otel-collector-snippet.yaml  schema.sql
infra/observability/grafana/: _gen_dashboard.py  grl-dashboard.json
launcher/: MANUAL_OPS.md  PLAN.md  README.md  example-config.yaml  pyproject.toml
launcher/src/grl/: __init__.py  bundle.py  clusters.py  config.py  errors.py  images.py  k8s.py  launcher.py  main.py  model.py  paths.py  secrets.py  terraform.py  tools.py  verify.py
launcher/tests/: __init__.py  test_config.py  test_k8s.py  test_launcher.py  test_paths_clusters.py  test_terraform_state.py  test_tools.py
proto/: README.md  pyproject.toml
proto/grl/environment/v1/: environment.proto
proto/src/grl_proto/: __init__.py  environment_client.py  generate_proto.py
proto/src/grl_proto/grl/environment/v1/: environment_pb2.py  environment_pb2.pyi  environment_pb2_grpc.py
proto/tests/: test_generate_proto.py  test_imports.py
training/: .dockerignore  Dockerfile  README.md  config.yaml  pyproject.toml
training/src/training/: checkpoints.py  config.py  dataset.py  environments.py  grpc_client.py  main.py  model.py  retry.py  rollouts.py  telemetry.py  trainer.py  types.py
training/src/training/proto/: generate_proto.py
training/src/training/proto/grl/environment/: __init__.py
training/src/training/proto/grl/environment/v1/: environment_pb2.py  environment_pb2.pyi  environment_pb2_grpc.py
training/tests/: test_batcher.py  test_checkpoints.py  test_import_isolation.py  test_model.py  test_policy_model.py  test_retry.py  test_rollouts.py  test_telemetry.py  test_trainer_memory.py
