[project]
name = "grl"
version = "0.1.0"
description = "CLI launcher for GRL training runs and cluster orchestration"
readme = "README.md"
authors = [
    { name = "Gerardo Salazar", email = "gfsalazar01@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
grl = "grl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grl"]
