[project]
name = "grl"
version = "0.1.0"
description = "CLI launcher for GRL training runs and cluster orchestration"
readme = "README.md"
authors = [
    { name = "Gerardo Salazar", email = "gfsalazar01@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.35.0",
    "grpcio>=1.81.1",
    "kubernetes>=31.0.0",
    "protobuf>=5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "grl-config",
    "grl-proto",
]

[tool.uv.sources]
grl-config = { path = "../config" }
grl-proto = { path = "../proto" }

[project.scripts]
grl = "grl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grl"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
