[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grl_proto"]

[project]
name = "grl-proto"
version = "0.1.0"
description = "Python gRPC stubs and client helpers for the GRL environment API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "grpcio>=1.81.1",
    "protobuf>=5.0",
]

[project.scripts]
generate-proto = "grl_proto.generate_proto:main"

[dependency-groups]
dev = [
    "grpcio-tools>=1.60",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
