[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/training"]

[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ray[default]==2.55.1",
]

[project.optional-dependencies]
environment = [
    "grpcio>=1.60",
]
training = [
    "torch>=2.5.0",
]
rollouts = [
    "vllm>=0.8.0",
]

[project.scripts]
training = "training.main:main"
generate-proto = "training.proto.generate_proto:main"

[dependency-groups]
dev = [
    "grpcio-tools>=1.60",
]
