[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/training"]

[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ray[default]==2.55.1",
    "grpcio>=1.81.1",
    "boto3>=1.35.0",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "grl-config",
    "grl-proto",
]

[tool.uv.sources]
grl-config = { path = "../config" }
grl-proto = { path = "../proto" }

[project.optional-dependencies]
training = [
    "torch>=2.5.0",
    "transformers>=4.46",
]
rollouts = [
    "renderers>=0.1.6",
    "transformers>=4.46",
    "vllm>=0.8.0",
]

[project.scripts]
training = "training.main:main"

[dependency-groups]
dev = [
    "renderers>=0.1.6",
    "torch>=2.5.0",
    "transformers>=4.46",
    "pytest>=8.0",
]
