[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time", "fs"] }
tonic = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
