[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
prost = "0.13"
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time", "fs"] }
tonic = "0.12"
tower = { version = "0.5", features = ["timeout"] }

[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
env = { path = "../swebench-lite/env" }
