[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1"
bytes = "1.12.1"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
prost = "0.13"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time", "fs"] }
tonic = "0.12"
tower = { version = "0.5", features = ["timeout"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
env = { path = "../swebench-lite/env" }
