[package]
name = "env"
version = "0.1.0"
edition = "2024"

[dependencies]
portable-pty = "0.8"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AF_VSOCK is Linux-only; the host (manager) and guest (this executor) both run
# Linux in production. Off-VM (e.g. macOS dev) the binary falls back to TCP and
# this dependency is simply not compiled.
[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
