[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vms"]

[project]
name = "vms"
version = "0.1.0"
description = "Generate SWE-bench-lite VM Dockerfiles from parquet dataset"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
vms = "vms.main:main"
